# ucs_sweeper

./: CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
ucs_sweeper/: __init__.py  calypso_ucs_sweeper.py
ucs_sweeper/core/: errors.py  helpers.py  logger.py  result_files.py
ucs_sweeper/support/: commands.py  file_ops.py  pdi_syslog.py  text_utils.py
