[metadata]
name = ucs_sweeper
version = attr:ucs_sweeper.__version__
description = BIG-IP UCS sweeper.
long_description = file:README.md
long_description_content_type = text/markdown
author = F5 Journeys Dev
author_email = JourneysDev@f5.com
license = Apache License, Version 2.0
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
platforms = any

[options.entry_points]
console_scripts =
    ucs-sweeper = ucs_sweeper.calypso_ucs_sweeper:main

[flake8]
max-line-length = 120
# E203: space before colon
extend-ignore = E203
per-file-ignores =
    test/parser/*:E501

[pylint.master]
init-hook='import os, sys; sys.path.append(os.getenv("ROOT_DIR",""))'
ignore = test

[isort]
force_single_line = True
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
line_length = 88

[tool:pytest]
addopts = -vv --showlocals --disable-warnings -rf -p no:warnings
testpaths = test/
